--- a/ReedHampton/Views/AboutMe/Delete.cshtml
+++ b/ReedHampton/Views/AboutMe/Delete.cshtml
@@ -4,53 +4,66 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>AboutMe</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.FlipBoardTitle)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FlipBoardTitle)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FlipBoardSubTitle)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FlipBoardSubTitle)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FlipboardThumnbailUrl)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FlipboardThumnbailUrl)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+<style>
+    body {
+        background-color: #c0bfb9;
     }
-</div>
+
+    hr {
+        border-top: 0.5px solid #660000;
+    }
+</style>
+<body>
+
+    <h2>Delete</h2>
+
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>AboutMe</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.FlipBoardTitle)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.FlipBoardTitle)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.FlipBoardSubTitle)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.FlipBoardSubTitle)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.FlipboardThumnbailUrl)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.FlipboardThumnbailUrl)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+
+        </dl>
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Home")
+            </div>
+        }
+    </div>
+</body>
