--- a/ReedHampton/Views/Images/Albums.cshtml
+++ b/ReedHampton/Views/Images/Albums.cshtml
@@ -9,6 +9,14 @@
 <head>
     
     <style>
+        body {
+            background-color: #c0bfb9;
+        }
+
+        hr {
+            border-top: 0.5px solid #660000;
+        }
+
         * {
             box-sizing: border-box;
         }
