--- a/ReedHampton/Views/Albums/AlbumGallery.cshtml
+++ b/ReedHampton/Views/Albums/AlbumGallery.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Index";
 }
 <style>
+    body {
+        background-color: #c0bfb9;
+    }
+
+    hr {
+        border-top: 0.5px solid #660000;
+    }
+
     .grow {
         transition: 1.5s ease;
     }
@@ -16,6 +24,7 @@
     }
 
 </style>
+
 <script>
     function changeBackground(url)
     {
@@ -23,7 +32,9 @@
     }
 </script>
 
-<h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:25px; padding-bottom:25px;">Photo Gallery</h1>
+<body>
+
+    <h1 style="text-align:center; font-family:Garamond; font-size:60px; padding-top:25px; padding-bottom:25px;">Photo Gallery</h1>
 
     @{
         if (User.Identity.IsAuthenticated)
@@ -71,3 +82,5 @@
             }
         }
     }
+
+</body>
