--- a/ReedHampton/Views/ProfessionalDocuments/Delete.cshtml
+++ b/ReedHampton/Views/ProfessionalDocuments/Delete.cshtml
@@ -5,6 +5,14 @@
 }
 
 <style>
+    body {
+        background-color: #c0bfb9;
+    }
+
+    hr {
+        border-top: 0.5px solid #660000;
+    }
+
     dl dd {
         padding-bottom: 25px;
     }
@@ -12,41 +20,46 @@
 
     }
 </style>
-<br />
 
-<h2>Are you sure you want to delete @Html.ValueFor(model => model.Title)?</h2>
+<body>
 
-<hr />
+    <br />
 
-<div>
-    <dl class="dl-horizontal" style="padding-top:25px; padding-left:300px;">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-    </dl>
+    <h2>Are you sure you want to delete @Html.ValueFor(model => model.Title)?</h2>
 
     <hr />
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
+    <div>
+        <dl class="dl-horizontal" style="padding-top:25px; padding-left:300px;">
+            <dt>
+                @Html.DisplayNameFor(model => model.Title)
+            </dt>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete @Html.ValueFor(model => model.Title)" class="btn btn-danger" />
-            <input type="button" class="btn btn-success" value="Back to Document Portfolio" onclick="window.location = '../DocumentPortfolio';" />
-        </div>
-    }
-</div>
+            <dd>
+                @Html.DisplayFor(model => model.Title)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+
+        </dl>
+
+        <hr />
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete @Html.ValueFor(model => model.Title)" class="btn btn-danger" />
+                <input type="button" class="btn btn-success" value="Back to Document Portfolio" onclick="window.location = '../DocumentPortfolio';" />
+            </div>
+        }
+    </div>
+
+</body>
